--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -98,7 +98,8 @@
      </section>
     </main>
     <footer class="rodape">
-        <p>Site criado por <a class="link-rodape" href="#">Luana Nascimento</a></p>
+        <p>Site criado por <a class="link-rodape" href="#">Gustavo Guanabara</a> para o <a class="link-rodape" href="https://www.cursoemvideo.com/" target="_blank">Curso em video</a></p>
+        <p>Reproduzido por <a class="link-rodape" href="#">Luana Nascimento</a></p>
     </footer>
   </body>
 </html>
